finalizando documentacion de modulo de categoria y simplificando complejidad en eliminacion de categoias
